added some centering and style changes

--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@ Example: <img data-src="image.png"> -->
         <!-- Hook -->
         <div class="row section" id="hookVis">
             <div class="centerItems" id="userGuess">
-                <h3 id="squirNumQuestion">How many squirrels do you think live in Central Park?<h3>
+                <h1 id="squirNumQuestion">How many squirrels do you think live in Central Park?<h3>
+                    <br>
                 <form id="squirrelForm" action="#firstPage" onsubmit="return false">
                     <input placeholder=" Guess Here!"type="number" id="userSquirNum" value=" ">
                     <input type="submit" class="squirButton" value="Submit">
                 </form>
             </div>
-            <div class="col-md-4" id="hook-comparingGuess">
+            <div class="col-md-4 centerItems" id="hook-comparingGuess">
                 <h1 class="backgroundLayout"id="comparingSquirNum"></h1>
             </div>
         </div>
