basic working bubble vis, old html structure

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <div class="container-fluid">
     <div id="fullpage">
 
-<!-- FOR LATER: USE LAZY LOADING FOR IMAGES (built-in with fullpage)
-Example: <img data-src="image.png"> -->
+        <!-- FOR LATER: USE LAZY LOADING FOR IMAGES (built-in with fullpage)
+        Example: <img data-src="image.png"> -->
 
         <!--    Landing Page    -->
         <div class="row section" id="landing">
@@ -50,12 +50,12 @@ Example: <img data-src="image.png"> -->
         <!-- Hook -->
         <div class="row section" id="hookVis">
             <div class="centerItems" id="userGuess">
-                <h1 id="squirNumQuestion">How many squirrels do you think live in Central Park?<h3>
+                <h1 id="squirNumQuestion">How many squirrels do you think live in Central Park?</h1>
                     <br>
-                <form id="squirrelForm" action="#firstPage" onsubmit="return false">
-                    <input placeholder=" Guess Here!"type="number" id="userSquirNum" value=" ">
-                    <input type="submit" class="squirButton" value="Submit">
-                </form>
+                    <form id="squirrelForm" action="#firstPage" onsubmit="return false">
+                        <input placeholder=" Guess Here!"type="number" id="userSquirNum" value=" ">
+                        <input type="submit" class="squirButton" value="Submit">
+                    </form>
             </div>
             <div class="col-md-4 centerItems" id="hook-comparingGuess">
                 <h1 class="backgroundLayout"id="comparingSquirNum"></h1>
@@ -63,7 +63,7 @@ Example: <img data-src="image.png"> -->
         </div>
 
         <!-- Rising Insights -->
-                <!-- Context Section-->
+        <!-- Context Section-->
         <div class="row section" id="censusInfo">
             <div class="centerItems">
                 <h1 id="transition2Context">But how did we know that?</h1>
@@ -78,7 +78,7 @@ Example: <img data-src="image.png"> -->
                             count and tell the story of every squirrel they saw.
                         </h3>
                     </div>
-                   <div class="col-md-7"></div>
+                    <div class="col-md-7"></div>
                 </div>
                 <div class="row">
                     <div class="col-md-7"></div>
@@ -96,7 +96,7 @@ Example: <img data-src="image.png"> -->
             <button class="squirButton" id="nextButtonHistorical">NEXT</button>
             <button class="squirButton" id="goBack">GO BACK</button>
         </div>
-                <!-- Squirrel Trivia -->
+        <!-- Squirrel Trivia -->
         <div class="row section" id="squirrelTrivia">
             <h1 class="centerItems">Let's test your knowledge on Squirrels!</h1>
             <br>
@@ -108,16 +108,16 @@ Example: <img data-src="image.png"> -->
                             <h3>A squirrel’s front teeth never stop growing.</h3>
                             <br>
                         </div>
-                            <div>
-                                <input type="radio" name="question-1-answers" id="question-1-answers-A" value="A" />
-                                <label for="question-1-answers-A"> TRUE </label>
-                            </div>
-                            <div>
-                                <input type="radio" name="question-1-answers" id="question-1-answers-B" value="B" />
-                                <label for="question-1-answers-B">FALSE</label>
-                            </div>
+                        <div>
+                            <input type="radio" name="question-1-answers" id="question-1-answers-A" value="A" />
+                            <label for="question-1-answers-A"> TRUE </label>
+                        </div>
+                        <div>
+                            <input type="radio" name="question-1-answers" id="question-1-answers-B" value="B" />
+                            <label for="question-1-answers-B">FALSE</label>
+                        </div>
                         <br>
-                            <input type="submit" class="squirButton" id="question-1-answer" value="Check Answer">
+                        <input type="submit" class="squirButton" id="question-1-answer" value="Check Answer">
                         <br><br>
                         <div class="answer-reveal" id="answer-1">
                             This is true. their teeth grow at a rate of ~6 inches per year.
@@ -129,16 +129,16 @@ Example: <img data-src="image.png"> -->
                             <h3>Squirrels can land on 2 feet.</h3>
                             <br>
                         </div>
-                            <div>
-                                <input type="radio" name="question-2-answers" id="question-2-answers-A" value="A" />
-                                <label for="question-2-answers-A"> TRUE </label>
-                            </div>
-                            <div>
-                                <input type="radio" name="question-2-answers" id="question-2-answers-B" value="B" />
-                                <label for="question-2-answers-B">FALSE</label>
-                            </div>
+                        <div>
+                            <input type="radio" name="question-2-answers" id="question-2-answers-A" value="A" />
+                            <label for="question-2-answers-A"> TRUE </label>
+                        </div>
+                        <div>
+                            <input type="radio" name="question-2-answers" id="question-2-answers-B" value="B" />
+                            <label for="question-2-answers-B">FALSE</label>
+                        </div>
                         <br>
-                            <input type="submit" class="squirButton" id="question-2-answer" value="Check Answer">
+                        <input type="submit" class="squirButton" id="question-2-answer" value="Check Answer">
                         <br><br>
                         <div class="answer-reveal" id="answer-2">
                             This is false. Squirrels, like cats, actually always land on 4 feet.
@@ -150,16 +150,16 @@ Example: <img data-src="image.png"> -->
                             <h3>A newborn squirrel is ~3.5 inches long.</h3>
                             <br>
                         </div>
-                            <div>
-                                <input type="radio" name="question-3-answers" id="question-3-answers-A" value="A" />
-                                <label for="question-3-answers-A"> TRUE </label>
-                            </div>
-                            <div>
-                                <input type="radio" name="question-3-answers" id="question-3-answers-B" value="B" />
-                                <label for="question-3-answers-B">FALSE</label>
-                            </div>
+                        <div>
+                            <input type="radio" name="question-3-answers" id="question-3-answers-A" value="A" />
+                            <label for="question-3-answers-A"> TRUE </label>
+                        </div>
+                        <div>
+                            <input type="radio" name="question-3-answers" id="question-3-answers-B" value="B" />
+                            <label for="question-3-answers-B">FALSE</label>
+                        </div>
                         <br>
-                            <input type="submit" class="squirButton" id="question-3-answer" value="Check Answer">
+                        <input type="submit" class="squirButton" id="question-3-answer" value="Check Answer">
                         <br><br>
                         <div class="answer-reveal" id="answer-3">
                             This is false. Newborn squirrels are actually ~1 inch long.
@@ -170,14 +170,32 @@ Example: <img data-src="image.png"> -->
             </div>
         </div>
 
-                <!-- Bubble Vis -->
-        <div class="row section" id="bubbleVis">
-            <img src="images/bubble.png">
-            <div class="col-md-12">
-                <div id="bubble_vis"></div>
+        <!-- Bubble Vis -->
+        <div class="section" id="bubbleVis">
+            <!--            <img src="images/bubble.png">-->
+            <div class="row align-middle" style="height: 80vh;">
+                <div class="col-md-6">
+                    <div class="row">
+                        Squirrels have personalities, too! Census takers carefully observed their daily activities. Click to filter a sample of 90 squirrels by various attributes.
+                    </div>
+                    <div class="row" style="height: 7vh; ">
+                        <select name="story_categories" id="bubble_select" class="form-control">
+                            <!--                            <option value="Story Topic (String)">Story Topic</option>-->
+                            <option value="Human Interactions">Human Interactions</option>
+                            <option value="Activities">Activities</option>
+                            <option value="Sounds">Sounds</option>
+                            <!--                            <option value="Fur color">Fur color</option>-->
+                            <!--                            <option value="numberPriorates">Number of seats held in the civic council</option>-->
+                        </select>
+                    </div>
+                    <div id="bubble_vis"></div>
+                </div>
+                <div class="col-md-6">
+                    <div id="bar_vis"></div>
+                </div>
             </div>
         </div>
-                <!-- Stories Vis -->
+        <!-- Stories Vis -->
         <div class="section" id="storiesVis">
             <div class="row align-middle" style="height: 80vh;">
                 <div class="col-md-5">
@@ -187,12 +205,12 @@ Example: <img data-src="image.png"> -->
                 <div class="col-md-7">
                     <div class="row" style="height: 7vh; ">
                         <select name="story_categories" id="story_select" class="form-control">
-<!--                            <option value="Story Topic (String)">Story Topic</option>-->
+                            <!--                            <option value="Story Topic (String)">Story Topic</option>-->
                             <option value="Shift">Time of Day</option>
                             <option value="Other Animals">Other animals</option>
                             <option value="Squirrels">Squirrels</option>
                             <option value="Story Topic: Accidental Poems">Accidental Poems</option>
-<!--                            <option value="numberPriorates">Number of seats held in the civic council</option>-->
+                            <!--                            <option value="numberPriorates">Number of seats held in the civic council</option>-->
                         </select>
                     </div>
                     <div class="row" id="sentiment_vis">
@@ -258,39 +276,39 @@ Example: <img data-src="image.png"> -->
                     <h4>Filter the squirrel sightings</h4>
                     <div class="btn-group-toggle" data-toggle="buttons">
                         <p class="filterLabel">Primary Fur Color</p>
-                            <label class="btn btn-outline-dark">
-                                <input class="fur" type="checkbox" autocomplete="off" value="Gray" onclick="mapFilterClicked(this)">Gray
-                            </label>
-                            <label class="btn btn-outline-dark">
-                                <input class="fur" type="checkbox" autocomplete="off" value="Cinnamon" onclick="mapFilterClicked(this)">Cinnamon
-                            </label>
-                            <label class="btn btn-outline-dark">
-                                <input class="fur" type="checkbox" autocomplete="off" value="Black" onclick="mapFilterClicked(this)">Black
-                            </label>
+                        <label class="btn btn-outline-dark">
+                            <input class="fur" type="checkbox" autocomplete="off" value="Gray" onclick="mapFilterClicked(this)">Gray
+                        </label>
+                        <label class="btn btn-outline-dark">
+                            <input class="fur" type="checkbox" autocomplete="off" value="Cinnamon" onclick="mapFilterClicked(this)">Cinnamon
+                        </label>
+                        <label class="btn btn-outline-dark">
+                            <input class="fur" type="checkbox" autocomplete="off" value="Black" onclick="mapFilterClicked(this)">Black
+                        </label>
                         <p class="filterLabel">Reaction to Humans</p>
-                            <label class="btn btn-outline-dark">
-                                <input class="reaction" type="checkbox" autocomplete="off" value="Approaches" onclick="mapFilterClicked(this)">Approaches
-                            </label>
-                            <label class="btn btn-outline-dark">
-                                <input class="reaction" type="checkbox" autocomplete="off" value="Indifferent" onclick="mapFilterClicked(this)">Indifferent
-                            </label>
-                            <label class="btn btn-outline-dark">
-                                <input class="reaction" type="checkbox" autocomplete="off" value="Runs from" onclick="mapFilterClicked(this)">Runs From
-                            </label>
+                        <label class="btn btn-outline-dark">
+                            <input class="reaction" type="checkbox" autocomplete="off" value="Approaches" onclick="mapFilterClicked(this)">Approaches
+                        </label>
+                        <label class="btn btn-outline-dark">
+                            <input class="reaction" type="checkbox" autocomplete="off" value="Indifferent" onclick="mapFilterClicked(this)">Indifferent
+                        </label>
+                        <label class="btn btn-outline-dark">
+                            <input class="reaction" type="checkbox" autocomplete="off" value="Runs from" onclick="mapFilterClicked(this)">Runs From
+                        </label>
                         <p class="filterLabel">Time of Sighting</p>
-                            <label class="btn btn-outline-dark">
-                                <input class="time" type="checkbox" autocomplete="off" value="AM" onclick="mapFilterClicked(this)">Morning
-                            </label>
-                            <label class="btn btn-outline-dark">
-                                <input class="time" type="checkbox" autocomplete="off" value="PM" onclick="mapFilterClicked(this)">Afternoon
-                            </label>
+                        <label class="btn btn-outline-dark">
+                            <input class="time" type="checkbox" autocomplete="off" value="AM" onclick="mapFilterClicked(this)">Morning
+                        </label>
+                        <label class="btn btn-outline-dark">
+                            <input class="time" type="checkbox" autocomplete="off" value="PM" onclick="mapFilterClicked(this)">Afternoon
+                        </label>
                         <p class="filterLabel">Squirrel Location</p>
-                            <label class="btn btn-outline-dark">
-                                <input class="location" type="checkbox" autocomplete="off" value="Above Ground" onclick="mapFilterClicked(this)">Above Ground
-                            </label>
-                            <label class="btn btn-outline-dark">
-                                <input class="location" type="checkbox" autocomplete="off" value="Ground Plane" onclick="mapFilterClicked(this)">On Ground
-                            </label>
+                        <label class="btn btn-outline-dark">
+                            <input class="location" type="checkbox" autocomplete="off" value="Above Ground" onclick="mapFilterClicked(this)">Above Ground
+                        </label>
+                        <label class="btn btn-outline-dark">
+                            <input class="location" type="checkbox" autocomplete="off" value="Ground Plane" onclick="mapFilterClicked(this)">On Ground
+                        </label>
                     </div>
                 </div>
             </div>
@@ -313,10 +331,10 @@ Example: <img data-src="image.png"> -->
                         <div class="card mb-4 shadow-sm">
                             <div class="card-header">Your Walk</div>
                             <div class="card-body">
-                            <p class="numSquirrels"></p>
-                            <p class="squirrelApproach"></p>
-                            <p class="walkDistance"></p>
-                            <p class="otherAnimals"></p>
+                                <p class="numSquirrels"></p>
+                                <p class="squirrelApproach"></p>
+                                <p class="walkDistance"></p>
+                                <p class="otherAnimals"></p>
                             </div>
                         </div>
                     </div>
@@ -371,6 +389,7 @@ Example: <img data-src="image.png"> -->
 
 <!-- Visualization objects -->
 <script src="js/bubble_vis.js"></script>
+<script src="js/bar_vis.js"></script>
 <script src="js/stories_vis.js"></script>
 <script src="js/sentiment_vis.js"></script>
 <script src="js/stories_map_vis.js"></script>
