--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="row section" id="landing">
             <div class="col-md-12">
                 <h1><span class="h1-sub">Final Project:</span> Squirrels in Central Park</h1>
-                <h2>Squirrels are cute, squirrels are fun!</h2>
+                <h2 class="addMargins">Squirrels are cute, squirrels are fun!</h2>
             </div>
         </div>
 
@@ -174,8 +174,11 @@
         <div class="row section" id="mainMessage">
 
             <!--      Title and Description      -->
-            <h1>Stories about Squirrels in Central Park</h1>
-            <p class="mainMessageCaption">Hover over each story to see where it took place on the map!</p>
+            <div class="squirrelMapDescription">
+                <h2 class="centerText squirrelMapTitle">Learn about the census takers' experiences & the squirrels they saw</h2>
+                <p class="squirrelMapCaption centerText">When hovering over a story, look at the map to see where it took place.</p>
+            </div>
+
 
             <!--      Checkbox Filters for Squirrel Stories      -->
             <div class="row storyMapFilters">
@@ -195,9 +198,6 @@
                     </label>
                     <label class="btn btn-outline-dark">
                         <input class="storyMap" type="checkbox" autocomplete="off" value="Story Topic: Accidental Poems" onclick="storyMapFilterClicked(this)">Accidental Poems
-                    </label>
-                    <label class="btn btn-outline-dark">
-                        <input class="storyMap" type="checkbox" autocomplete="off" value="Story Topic: Park Experience or Census Taker Story" onclick="storyMapFilterClicked(this)">Census Taker Story
                     </label>
                     <label class="btn btn-outline-dark">
                         <input class="storyMap" type="checkbox" autocomplete="off" value="Story Topic: Census Takers Recognized" onclick="storyMapFilterClicked(this)">Census Taker Recognized
@@ -221,9 +221,10 @@
 
                 <!--       Checkbox Filters for Squirrel Sightings Map        -->
                 <div class="col-md-6">
-                    <h4>Filter the squirrel sightings</h4>
+                    <h4>Filter the squirrel sightings on the map</h4>
+                    <p style="font-style: italic">Note: Try clicking on the dots on the map!</p>
                     <div class="btn-group-toggle" data-toggle="buttons">
-                        <p class="filterLabel">Primary Fur Color</p>
+                        <p class="filterLabel">Squirrel's Primary Fur Color</p>
                         <label class="btn btn-outline-dark">
                             <input class="fur" type="checkbox" autocomplete="off" value="Gray" onclick="mapFilterClicked(this)">Gray
                         </label>
@@ -233,7 +234,7 @@
                         <label class="btn btn-outline-dark">
                             <input class="fur" type="checkbox" autocomplete="off" value="Black" onclick="mapFilterClicked(this)">Black
                         </label>
-                        <p class="filterLabel">Reaction to Humans</p>
+                        <p class="filterLabel">Squirrel's Reaction to Humans</p>
                         <label class="btn btn-outline-dark">
                             <input class="reaction" type="checkbox" autocomplete="off" value="Approaches" onclick="mapFilterClicked(this)">Approaches
                         </label>
@@ -338,7 +339,7 @@
         <div class="row section">
             <!--      Title and Description   -->
             <div class="walkDescription">
-                <h1 class="centerText">Draw a walk you'd like to take in Central Park! </h1>
+                <h1 class="centerText">Learn about the animals you could see on a walk in Central Park! </h1>
                 <p class="centerText">Click "Heat Map" to see which hectares have the most squirrels. Then, try clicking on the heat map!</p>
             </div>
 
