clearer heat map instruction placement

--- a/index.html
+++ b/index.html
@@ -340,7 +340,6 @@
             <!--      Title and Description   -->
             <div class="walkDescription">
                 <h1 class="centerText">Learn about the animals you could see on a walk in Central Park! </h1>
-                <p class="centerText">Click "Heat Map" to see which hectares have the most squirrels. Then, try clicking on the heat map!</p>
             </div>
 
             <div class="row walkMap">
@@ -353,7 +352,7 @@
                     <div id="walk_map_info">
                         <p><strong>Walk Instructions: </strong>Using the tool bar on the left, draw line segments (a walk) on the map.
                             Stay within the bounds of Central Park.
-                            <br/> Note: the shorter your line segments, the more accurate your walk information will be.
+                            <br/> The shorter your line segments, the more accurate your walk information will be.
                             <br/> Click "Finish" on the tool bar when you are ready to learn about your walk!</p>
                         <div class="card mb-4 shadow-sm walkCard">
                             <div class="card-header">Your Walk</div>
@@ -375,6 +374,9 @@
                             </div>
                         </div>
                     </div>
+
+
+                    <p style="margin-bottom: 10px">Click "Heat Map" to see which hectares have the most squirrels. Then, try clicking on the heat map!</p>
 
                     <!-- Button to show heat map -->
                     <div class="btn-group-toggle" data-toggle="buttons">
