increased title padding, shortened text

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <!--       Checkbox Filters for Squirrel Sightings Map        -->
                 <div class="col-md-6">
                     <h4>Filter the squirrel sightings on the map</h4>
-                    <p style="font-style: italic">Note: Try clicking on the dots on the map!</p>
+                    <p style="font-style: italic">You can click on the dots!</p>
                     <div class="btn-group-toggle" data-toggle="buttons">
                         <p class="filterLabel">Squirrel's Primary Fur Color</p>
                         <label class="btn btn-outline-dark">
